Fix image size on small, high-resolution screens.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,6 +57,7 @@ div.project-section div {
 div.project-image-cont {
 	width: 20%;
 	height: 200px;
+	min-width: 3in;
 	text-align: center;
 	vertical-align: middle;
 }
@@ -3454,7 +3455,7 @@ input, select, textarea {
 
 	#wrapper > * > .inner {
 		width: 100%;
-		max-width: 68em;
+		max-width: 80em;
 		margin: 0 auto;
 		padding: 0 2.5em;
 	}
